SE CREARON LAS SIGUIENTES ENTIDADES: -Amigos. -Entradas. -Juegos. -Prestamos. -PrestamosDetalle.

--- a/PrestamosJuegos.csproj
+++ b/PrestamosJuegos.csproj
@@ -1,13 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+		<StartworkinDirectory>$(MSBulidProjectDirectory)</StartworkinDirectory>
+
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<UseWPF>true</UseWPF>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Folder Include="DAL\" />
+		<Folder Include="BLL\" />
+		<Folder Include="DATA\" />
+		<Folder Include="UI\Consultas\" />
+		<Folder Include="UI\Registros\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.1.7" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
 </Project>
