--- a/PrestamosJuegos.csproj
+++ b/PrestamosJuegos.csproj
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\agregar.png" />
+	  <None Remove="Resources\amigos.png" />
 	  <None Remove="Resources\console.png" />
 	  <None Remove="Resources\delete.png" />
 	  <None Remove="Resources\gamepad.png" />
@@ -37,6 +38,7 @@
 
 	<ItemGroup>
 	  <Resource Include="Resources\agregar.png" />
+	  <Resource Include="Resources\amigos.png" />
 	  <Resource Include="Resources\console.png" />
 	  <Resource Include="Resources\delete.png" />
 	  <Resource Include="Resources\gamepad.png" />
