SE PROGRAMARON LOS EVENTOS DE LOS BOTONES DE rAmigo. Faltan las validaciones.

--- a/PrestamosJuegos.csproj
+++ b/PrestamosJuegos.csproj
@@ -65,4 +65,10 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="DATA\PrestamosJuegos.db">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
